--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -4,26 +4,39 @@
         <img id="footer-logo" src="{{ asset('img/logo-futevent.png') }}" alt="Logo FutEvent">
 
         <div id="footer-lists">
+
             <div class="footer-list">
                 <h3>SITEMAP</h3>
-                <ul>
-                    <li><a class="nav-link" href="">Accueil</a></li>
-                    <li><a class="nav-link" href="">Catégories</a></li>
-                    <li><a class="nav-link" href="">Profil</a></li>
-                    <li><a class="nav-link" href="">Connexion</a></li>
-                    <li><a class="nav-link" href="">Inscription</a></li>
+                <ul class="links footer-links">
+                    <li><a class="link" href="">Accueil</a></li>
+                    <li><a class="link" href="">Catégories</a></li>
+                    <li><a class="link" href="">Profil</a></li>
+                    <li><a class="link" href="">Connexion</a></li>
+                    <li><a class="link" href="">Inscription</a></li>
                 </ul>
             </div>
 
             <div class="footer-list">
                 <h3>SOCIALS</h3>
-                <ul>
-                    <li>Linkedin</li>
-                    <li>Instagram</li>
-                    <li>Twitter</li>
-                    <li>Facebook</li>
+                <ul class="links footer-links">
+                    <li><a class="link" href="">Linkedin</a></li>
+                    <li><a class="link" href="">Instagram</a></li>
+                    <li><a class="link" href="">Twitter</a></li>
+                    <li><a class="link" href="">Facebook</a></li>
                 </ul>
             </div>
+
+            <div class="footer-list">
+                <h3>OFFICE</h3>
+                <ul class="links footer-links">
+                    <li>11 rue de la Haye 67200 Schiltigheim</li>
+                    <li>contact@futevent.com</li>
+                    <li>+33.1.23.45.67.89</li>
+                </ul>
+
+
+            </div>
+
         </div>
     </div>
 
