--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,6 +9,7 @@
 *{
     font-family: "League Spartan", sans-serif;
     margin: 0;
+    box-sizing: border-box;
 }
 
 ul{
@@ -82,6 +83,50 @@ nav{
 .link:hover::after{
     transform: scaleX(1);
     transform-origin: bottom left;
+}
+
+/* LOGIN */
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 50%;
+    padding: 5%;
+}
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.form-checkbox{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 1em;
+}
+
+input[type="text"], input[type="password"], input[type="submit"] {
+    width: 20em;
+    padding: 1em 2em;
+    margin-top: .5em;
+    margin-bottom: 1em;
+    border: var(--dark) 2px solid;
+    border-radius: 50px;
+    background-color: transparent;
+    font-family: "League Spartan", sans-serif;
+    color: var(--dark);
+    font-size: 16px;
+    transition: all 250ms ease-out;
+}
+
+input[type="submit"]:hover{
+    background-color: var(--dark);
+    color: var(--light);
+    cursor: pointer;
 }
 
 /* FOOTER */
