--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -2,23 +2,25 @@
 
 {% block body %}
 
-    <h1>Connexion</h1>
+    <div class="form-wrapper">
+        <h1>Connexion</h1>
 
-    <form action="" method="post">
-        <div class="form-group">
-            <label for="username">Nom d'utilisateur</label>
-            <input type="text" id="username" name="_username" value="" required autofocus>
-        </div>
-        <div class="form-group">
-            <label for="password">Mot de passe</label>
-            <input type="password" id="password" name="_password" required>
-        </div>
-        <div class="form-group form-checkbox">
-            <input type="checkbox" id="remember_me" name="_remember_me">
-            <label for="remember_me">Se souvenir de moi</label>
-        </div>
-        <input type="submit" value="Se connecter">
-    </form>
+        <form action="" method="post">
+            <div class="form-group">
+                <label for="username">Nom d'utilisateur</label>
+                <input type="text" id="username" name="_username" value="" required autofocus>
+            </div>
+            <div class="form-group">
+                <label for="password">Mot de passe</label>
+                <input type="password" id="password" name="_password" required>
+            </div>
+            <div class="form-group form-checkbox">
+                <input type="checkbox" id="remember_me" name="_remember_me">
+                <label for="remember_me">Se souvenir de moi</label>
+            </div>
+            <input type="submit" value="Se connecter">
+        </form>
+    </div>
 
 {% endblock %}
 
