Update page titles for base and login templates to enhance SEO and clarity

--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    Login
+{% endblock %}
+
 {% block body %}
 
     <div class="form-wrapper">
@@ -21,9 +25,5 @@
             <input type="submit" value="Se connecter">
         </form>
     </div>
-
-{% endblock %}
-
-{% block title %}
 
 {% endblock %}
