--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}FutEvent{% endblock %}</title>
+        <title>FutEvent - {% block title %}{% endblock %}</title>
         {% block stylesheets %}
             {# -- ICI REPOSE MON CODE CSS #}
             {# -- EX : BOOTSRAP CSS,... #}
