--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -8,11 +8,11 @@
             <div class="footer-list">
                 <h3>SITEMAP</h3>
                 <ul class="links footer-links">
-                    <li><a class="link" href="">Accueil</a></li>
+                    <li><a class="link" href="{{ path('default_home') }}">Accueil</a></li>
                     <li><a class="link" href="">Catégories</a></li>
                     <li><a class="link" href="">Profil</a></li>
-                    <li><a class="link" href="">Connexion</a></li>
-                    <li><a class="link" href="">Inscription</a></li>
+                    <li><a class="link" href="{{ path('user_login') }}">Connexion</a></li>
+                    <li><a class="link" href="{{ path('user_register') }}">Inscription</a></li>
                 </ul>
             </div>
 
