--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <a href="{{ path('default_home') }}"><img src="{{ asset('img/logo-futevent-line.png') }}" alt="Logo FutEvent" id="logo"></a>
+        <a href="{{ path('default_home') }}"><img src="{{ asset('img/logos/logo-futevent-line.png') }}" alt="Logo FutEvent" id="logo"></a>
         <ul class="links">
             <li><a class="link" href="{{ path('default_home') }}">Accueil</a></li>
             <li><a class="link" href="">Catégories</a></li>
