--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}
             {# -- ICI REPOSE MON CODE CSS #}
             {# -- EX : BOOTSRAP CSS,... #}
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
             <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
         {% endblock %}
 
