--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,7 +1,7 @@
 <footer>
 
     <div id="footer-main">
-        <img id="footer-logo" src="{{ asset('img/logo-futevent.png') }}" alt="Logo FutEvent">
+        <img id="footer-logo" src="{{ asset('img/logos/logo-futevent.png') }}" alt="Logo FutEvent">
 
         <div id="footer-lists">
 
