--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -3,7 +3,7 @@
         <a href="{{ path('default_home') }}"><img src="{{ asset('img/logos/logo-futevent-line.png') }}" alt="Logo FutEvent" id="logo"></a>
         <ul class="links">
             <li><a class="link" href="{{ path('default_home') }}">Accueil</a></li>
-            <li><a class="link" href="">Catégories</a></li>
+            <li><a class="link" href="{{ path('app_category') }}">Catégories</a></li>
             <li><a class="link" href="{#{{ path('user_profile') }}#}">Profil</a></li>
             <li><a class="link" href="{{ path('user_login') }}">Connexion</a></li>
             <li><a class="link" href="{{  path('user_register') }}">Inscription</a></li>
