--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,7 @@ ul{
 }
 
 a, a:link, a:visited, a:hover, a:active, a:focus {
+    text-decoration: none;
     color: inherit;
 }
 
@@ -27,6 +28,28 @@ li, li a{
 
 h3{
     margin: 1em 0;
+}
+
+.btn {
+    border: 2px solid var(--dark);
+    border-radius: 50px;
+    background: none;
+    color: var(--dark);
+    font-size: 20px;
+    font-weight: 700;
+    padding: .5em 1em;
+    width: 100%;
+    cursor: pointer;
+    transition: all 250ms ease-out;
+}
+
+.btn:hover{
+    background-color: var(--dark);
+    color: var(--light);
+}
+
+.btn:active{
+    border-color: var(--primary);
 }
 
 body{
@@ -103,6 +126,7 @@ nav{
 
 .search-form input{
     width: 100% !important;
+    padding-right: 3em !important;
 }
 
 .search-btn{
@@ -121,44 +145,58 @@ nav{
     color: var(--primary);
 }
 
-.event{
-    display: flex;
-    gap: 1em;
-    padding: 1em 1.5em;
-    background-color: var(--dark);
-    color: var(--light);
-    border-radius: 15px;
-}
-
-.event img{
-    width: 25%;
-    height: auto;
-    border-radius: 15px;
-}
-
-.event-text{
+.events-list{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 2em;
+}
+
+.event{
+    display: flex;
+    justify-content: space-between;
+    padding: 1em;
+    gap: 1em;
+    background-color: var(--dark);
+    border-radius: 30px;
+    color: var(--light);
+}
+
+.event-list-img{
+    width: 20%;
+    height: auto;
+}
+
+.event-list-img img{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.event-list-text{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     gap: 1em;
     width: 40%;
 }
 
-.event-title{
+.event-list-title{
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 1em;
 }
 
-.event-users{
+.event-list-users{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.event-btns{
+.event-list-btns{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -166,29 +204,77 @@ nav{
     gap: 1em;
 }
 
-.btn {
+.list-btn{
     border: 2px solid var(--light);
-    border-radius: 50px;
-    background: none;
     color: var(--light);
-    font-size: 20px;
-    font-weight: 700;
-    padding: .5em 1em;
-    width: 100%;
-    transition: all 250ms ease-out;
 }
 
-.btn:hover{
+.list-btn:hover{
     background-color: var(--light);
     color: var(--dark);
 }
 
-.btn:active{
-    border-color: var(--primary);
+/* EVENT DETAIL */
+
+.event-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.event-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.event-main{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5em;
+}
+
+.event-description{
+    width: 70%;
+    font-size: 20px;
+}
+
+.event-img{
+    width: 30%;
+    height: auto;
+}
+
+.event-img img{
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    border-radius: 15px;
+}
+
+.event-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.event-users{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
+.event-btns{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
 }
 
 
-    /* LOGIN */
+/* LOGIN */
 
 .form-wrapper{
     display: flex;
