--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,18 +1,18 @@
 <footer>
 
     <div id="footer-main">
-        <img id="footer-logo" src="{{ asset('img/logos/logo-futevent.png') }}" alt="Logo FutEvent">
+        <img id="footer-logo" src="{{ asset('img/logos/logo-futevent.png') }}" alt="FutEvent Logo">
 
         <div id="footer-lists">
 
             <div class="footer-list">
                 <h3>SITEMAP</h3>
                 <ul class="links footer-links">
-                    <li><a class="link" href="{{ path('default_home') }}">Accueil</a></li>
-                    <li><a class="link" href="">Catégories</a></li>
-                    <li><a class="link" href="">Profil</a></li>
-                    <li><a class="link" href="{{ path('user_login') }}">Connexion</a></li>
-                    <li><a class="link" href="{{ path('user_register') }}">Inscription</a></li>
+                    <li><a class="link" href="{{ path('default_home') }}">Home</a></li>
+                    <li><a class="link" href="{{ path('category_list') }}">Categories</a></li>
+                    <li><a class="link" href="">Profile</a></li>
+                    <li><a class="link" href="{{ path('user_login') }}">Login</a></li>
+                    <li><a class="link" href="{{ path('user_register') }}">Sign In</a></li>
                 </ul>
             </div>
 
