--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,12 +1,12 @@
 <header>
     <nav>
-        <a href="{{ path('default_home') }}"><img src="{{ asset('img/logos/logo-futevent-line.png') }}" alt="Logo FutEvent" id="logo"></a>
+        <a href="{{ path('default_home') }}"><img src="{{ asset('img/logos/logo-futevent-line.png') }}" alt="FutEvent Logo" id="logo"></a>
         <ul class="links">
-            <li><a class="link" href="{{ path('default_home') }}">Accueil</a></li>
-            <li><a class="link" href="{{ path('app_category') }}">Catégories</a></li>
-            <li><a class="link" href="{#{{ path('user_profile') }}#}">Profil</a></li>
-            <li><a class="link" href="{{ path('user_login') }}">Connexion</a></li>
-            <li><a class="link" href="{{  path('user_register') }}">Inscription</a></li>
+            <li><a class="link" href="{{ path('default_home') }}">Home</a></li>
+            <li><a class="link" href="{{ path('category_list') }}">Categories</a></li>
+            <li><a class="link" href="{#{{ path('user_profile') }}#}">Profile</a></li>
+            <li><a class="link" href="{{ path('user_login') }}">Login</a></li>
+            <li><a class="link" href="{{  path('user_register') }}">Sign In</a></li>
         </ul>
     </nav>
 </header>
