--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -124,9 +124,12 @@ nav{
     width: 100%;
 }
 
-.search-form input{
+.search-form label, input{
     width: 100% !important;
-    padding-right: 3em !important;
+}
+
+.search-form input{
+    padding-right: 3em;
 }
 
 .search-btn{
