--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -6,7 +6,9 @@
 
     <div class="search-wrapper">
         <form class="search-form" action="" method="post">
-            <input type="text" name="query" placeholder="Search...">
+            <label>
+                <input type="text" name="query" placeholder="Search...">
+            </label>
             <button class="search-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         </form>
     </div>
@@ -27,18 +29,13 @@
                     </p>
                 </div>
                 {#<div class="event-list-users">
-                <h3><i class="fa-solid fa-user"></i> {{ event.user_int }} users interested</h3>
-                <h3><i class="fa-solid fa-user"></i> {{ event.user_registered }} user registered</h3>
-            </div>#}
-
-                {#<div class="event-list-btns">
-                {% if event.isJoined == false %}
+                    <h3><i class="fa-solid fa-user"></i> {{ event.user_int }} users interested</h3>
+                    <h3><i class="fa-solid fa-user"></i> {{ event.user_registered }} user registered</h3>
+                </div>#}
+                <div class="event-list-btns">
                     <button class="btn list-btn btn-primary">Join</button>
-                {% else %}
-                    <button class="btn list-btn btn-primary">Joined <i class="fa-solid fa-check"></i></button>
-                {% endif %}
-                <a href="{{ path(name = 'default_event', parameters = {category: type, title: event.title, id: 1}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-            </div>#}
+                    <a href="{{ path(name = 'event_show', parameters = {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                </div>
             </div>
         {% else %}
             <p>No events found in this category.</p>
