--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -10,31 +10,27 @@
 
         <div class="event-top">
             <h2>{{ event.title|upper }}</h2>
-            <h2>{{ event.date }} - {{ event.time }}</h2>
+            <h2>{{ event.datetimeStart|date("d/m/Y H:i") }}</h2>
         </div>
 
         <div class="event-main">
             <p class="event-description">
-                {{ event.description|replace({'.': '.<br/>'}) | raw }}
+                {{ event.description}}
             </p>
 
             <figure class="event-img">
-                <img src="{{ asset( event.img ) }}" alt="">
+                <img src="{{ asset( event.image ) }}" alt="">
             </figure>
         </div>
 
         <div class="event-bottom">
-            <div class="event-users">
+            {#<div class="event-users">
                 <h3><i class="fa-solid fa-user"></i> {{ event.user_int }} users interested</h3>
                 <h3><i class="fa-solid fa-user"></i> {{ event.user_registered }} user registered</h3>
-            </div>
+            </div>#}
 
             <div class="event-btns">
-                {% if event.isJoined == false %}
-                    <button class="btn btn-primary">Join</button>
-                {% else %}
-                    <button class="btn btn-primary">Joined <i class="fa-solid fa-check"></i></button>
-                {% endif %}
+                <button class="btn btn-primary">Join</button>
                 <a class="btn btn-secondary" href="">Share <i class="fa-solid fa-share-nodes"></i></a>
             </div>
         </div>
