--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -32,9 +32,9 @@
                     <h3><i class="fa-solid fa-user"></i> {{ event.user_int }} users interested</h3>
                     <h3><i class="fa-solid fa-user"></i> {{ event.user_registered }} user registered</h3>
                 </div>#}
-                <div class="event-list-btns">
-                    <button class="btn list-btn btn-primary">Join</button>
-                    <a href="{{ path(name = 'event_show', parameters = {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="btns">
+                    <a class="btn">Join</a>
+                    <a class="btn" href="{{ path(name = 'event_show', parameters = {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         {% else %}
@@ -46,5 +46,6 @@
 {% endblock %}
 
 {% block title %}
+    {{ category.name }}
 {% endblock %}
 
