--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -7,22 +7,22 @@
 {% block body %}
 
     <div class="form-wrapper">
-        <h1>Connexion</h1>
+        <h1>Login</h1>
 
         <form action="" method="post">
             <div class="form-group">
-                <label for="username">Nom d'utilisateur</label>
+                <label for="username">Username</label>
                 <input type="text" id="username" name="_username" value="" required autofocus>
             </div>
             <div class="form-group">
-                <label for="password">Mot de passe</label>
+                <label for="password">Password</label>
                 <input type="password" id="password" name="_password" required>
             </div>
             <div class="form-group form-checkbox">
                 <input type="checkbox" id="remember_me" name="_remember_me">
-                <label for="remember_me">Se souvenir de moi</label>
+                <label for="remember_me">Remember me</label>
             </div>
-            <input type="submit" value="Se connecter">
+            <input type="submit" value="Connnect">
         </form>
     </div>
 
