--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -7,12 +7,12 @@
 {% block body %}
 
     <div class="form-wrapper">
-        <h1>Inscription</h1>
+        <h1>Sign In</h1>
 
         <form action="" method="post">
 
             <div class="form-group">
-                <label for="username">Nom d'utilisateur</label>
+                <label for="username">Username</label>
                 <input type="text" id="username" name="_username" value="" required autofocus>
             </div>
 
@@ -22,16 +22,16 @@
             </div>
 
             <div class="form-group">
-                <label for="password">Mot de passe</label>
+                <label for="password">Password</label>
                 <input type="password" id="password" name="_password" required>
             </div>
 
             <div class="form-group">
-                <label for="confirm_password">Confirmer le mot de passe</label>
+                <label for="confirm_password">Confirm Password</label>
                 <input type="password" id="confirm_password" name="_confirm_password" required>
             </div>
 
-            <input type="submit" value="S'inscrire">
+            <input type="submit" value="Register">
         </form>
 
     </div>
