--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -11,8 +11,8 @@
                     <li><a class="link" href="{{ path('default_home') }}">Home</a></li>
                     <li><a class="link" href="{{ path('category_list') }}">Categories</a></li>
                     <li><a class="link" href="">Profile</a></li>
-                    <li><a class="link" href="{{ path('security_login') }}">Login</a></li>
-                    <li><a class="link" href="">Sign In</a></li>
+                    <li><a class="link" href="">Login</a></li>
+                    <li><a class="link" href="{{ path('app_register') }}">Sign In</a></li>
                 </ul>
             </div>
 
