--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -5,8 +5,8 @@
             <li><a class="link" href="{{ path('default_home') }}">Home</a></li>
             <li><a class="link" href="{{ path('category_list') }}">Categories</a></li>
             <li><a class="link" href="{#{{ path('user_profile') }}#}">Profile</a></li>
-            <li><a class="link" href="{{ path('security_login') }}">Login</a></li>
-            <li><a class="link" href="">Sign In</a></li>
+            <li><a class="link" href="">Login</a></li>
+            <li><a class="link" href="{{ path('app_register') }}">Sign In</a></li>
         </ul>
     </nav>
 </header>
