Refactor registration functionality: remove unused `register.html.twig`, enhance password validation with constraints, add email uniqueness, and update form styling.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -263,7 +263,7 @@ main{
 }
 
 
-/* LOGIN */
+/* FORMS */
 
 .form-wrapper{
     display: flex;
@@ -276,6 +276,7 @@ form {
     display: flex;
     flex-direction: column;
     gap: 1em;
+    width: 50%;
 }
 
 .form-group{
@@ -328,6 +329,4 @@ input[type="submit"]:active{
 
 /* REGISTER */
 
-.register-wrapper form div{
-}
 
