--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
 
     {{ form_errors(registrationForm) }}
 
-    <div class="form-wrapper register-form">
+    <div class="form-wrapper">
 
         <h1>Register</h1>
 
