--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -4,9 +4,13 @@
         <ul class="links">
             <li><a class="link" href="{{ path('default_home') }}">Home</a></li>
             <li><a class="link" href="{{ path('category_list') }}">Categories</a></li>
-            <li><a class="link" href="{#{{ path('user_profile') }}#}">Profile</a></li>
-            <li><a class="link" href="">Login</a></li>
-            <li><a class="link" href="{{ path('app_register') }}">Sign In</a></li>
+            {% if app.user %}
+                <li><a class="link" href="{#{{ path('user_profile') }}#}">Profile</a></li>
+                <li><a class="link" href="{{ path('app_logout') }}">Logout</a></li>
+            {% else %}
+                <li><a class="link" href="{{ path('app_login') }}">Login</a></li>
+                <li><a class="link" href="{{ path('app_register') }}">Sign In</a></li>
+            {% endif %}
         </ul>
     </nav>
 </header>
