Add category creation functionality with form validation and UI updates
- Create `CategoryType` form for building category forms.
- Update `CategoryController` with a `new` action for category creation.
- Add `new.html.twig` template for category form rendering.
- Update category list template with a "Create" action link.

--- a/templates/category/list.html.twig
+++ b/templates/category/list.html.twig
@@ -5,6 +5,7 @@
 {% block body %}
 
     <div class="categories-list">
+        <a class="btn" href="{{ path('category_new') }}">Create</a>
         {% for category in categories %}
             <a class="category" href="{{ path(name = 'category_show', parameters = {id: category.id}) }}">
                 {#<figure class="category-img">
