--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -6,12 +6,12 @@
     {% else %}
         Create
     {% endif %}
-         Category
+    Event
 {% endblock %}
 
 {% block body %}
 
-    {{ form_errors(categoryForm) }}
+    {{ form_errors(eventForm) }}
 
     <div class="form-wrapper">
 
@@ -21,14 +21,19 @@
             {% else %}
                 Create
             {% endif %}
-            Category
+            Event
         </h1>
 
-        {{ form_start(categoryForm) }}
+        {{ form_start(eventForm) }}
 
-        {{ form_row(categoryForm.name) }}
+        {{ form_row(eventForm.title) }}
+        {{ form_row(eventForm.description) }}
+        {{ form_row(eventForm.image) }}
+        {{ form_row(eventForm.datetime_start) }}
+        {{ form_row(eventForm.datetime_end) }}
+        {{ form_row(eventForm.category) }}
 
         <input type="submit" class="btn" value="{% if edit %}Edit{% else %}Create{% endif %}">
-        {{ form_end(categoryForm) }}
+        {{ form_end(eventForm) }}
     </div>
 {% endblock %}
