--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -10,7 +10,11 @@
     <div class="home-event">
 
         <figure class="event-img">
-            <img src="{{ asset( event.image ) }}" alt="">
+            {% if event.image %}
+                <img src="{{ asset('img/event/' ~ event.image) }}" alt="">
+            {% else %}
+                <img src="{{ asset('img/partials/image_not_found.png') }}" alt="">
+            {% endif %}
         </figure>
 
        <div class="home-event-text">
