--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,6 +50,7 @@ h3{
     font-size: 20px;
     font-weight: 700;
     padding: .5em 1em;
+    min-width: fit-content;
     width: 100%;
     cursor: pointer;
     transition: all 250ms ease-out;
@@ -84,7 +85,6 @@ main{
     justify-content: space-between;
     align-items: center;
     gap: 5em;
-    margin-top: 5em;
     padding: 1em;
     border-radius: 30px;
     background-color: var(--dark);
@@ -106,6 +106,13 @@ main{
     gap: 1em;
 }
 
+.home-event-bottom{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+}
 
 /* LIST */
 
@@ -211,7 +218,6 @@ main{
 .event-detail-top{
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .event-detail-main{
@@ -227,7 +233,7 @@ main{
 }
 
 .event-img{
-    width: 30%;
+    width: 20%;
     height: auto;
 }
 
