--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,13 +3,20 @@
 {% block body %}
 
     <h1>{{ category.name }}</h1>
+
     <div class="btns">
-        <a class="btn" href="{{ path(name = 'category_edit', parameters = {id: category.id}) }}">Edit</a>
-        <form method="post" action="{{ path('category_delete', {id: category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this category?');">
-            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-            <button type="submit" class="btn">Delete</button>
-        </form>
+        {% if app.user %}
+            <a class="btn" href={{ path('event_new', {categoryId: category.id}) }}>Create {{ category.name }} Event</a>
+        {% endif %}
+        {% if is_granted('ROLE_ADMIN') %}
+            <a class="btn" href="{{ path('category_edit', {id: category.id}) }}">Edit</a>
+            <form method="post" action="{{ path('category_delete', {id: category.id}) }}" onsubmit="return confirm('Are you sure you want to delete this category?');">
+                <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+                <button type="submit" class="btn">Delete</button>
+            </form>
+        {% endif %}
     </div>
+
 
     <div class="search-wrapper">
         <form class="search-form" action="" method="post">
@@ -45,7 +52,7 @@
                 </div>#}
                 <div class="btns">
                     <a class="btn">Join</a>
-                    <a class="btn" href="{{ path(name = 'event_show', parameters = {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a class="btn" href="{{ path('event_show', {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         {% else %}
