--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -9,8 +9,11 @@
     <div class="event-detail-wrapper">
 
         <div class="event-detail-top">
-            <h2>{{ event.title|upper }}</h2>
-            <h2>{{ event.datetimeStart|date("d/m/Y H:i") }}</h2>
+            <div>
+                <h2>{{ event.title|upper }}</h2>
+                <h3>{{ event.datetimeStart|date("d/m/Y H:i") }}</h3>
+            </div>
+            <h3>Created by {{ event.creator.username }}</h3>
         </div>
 
         <div class="event-detail-main">
@@ -28,15 +31,19 @@
         </div>
 
         <div class="event-detail-bottom">
-            {#<div class="event-detail-users">
-                <h3><i class="fa-solid fa-user"></i> {{ event.user_int }} users interested</h3>
-                <h3><i class="fa-solid fa-user"></i> {{ event.user_registered }} user registered</h3>
-            </div>#}
+
+            <h3><i class="fa-solid fa-user"></i> {{ event.users | length }} users</h3>
 
             <div class="btns">
                 <a class="btn event-detail-btn">Join</a>
                 <a class="btn btn-secondary-detail event-detail-btn" href="">Share <i class="fa-solid fa-share-nodes"></i></a>
-                <a class="btn btn-secondary-detail event-detail-btn" href="{{ path(name = 'event_new', parameters = {id: event.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
+                {% if app.user.id == event.creator.id %}
+                    <a class="btn btn-secondary-detail event-detail-btn" href="{{ path(name = 'event_new', parameters = {id: event.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
+                    <form method="post" action="{{ path('event_delete', {id: event.id}) }}" onsubmit="return confirm('Are you sure you want to delete this event?');">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
+                        <button type="submit" class="btn btn-secondary-detail event-detail-btn">Delete</button>
+                    </form>
+                {% endif %}
             </div>
         </div>
 
