--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -37,8 +37,8 @@
             <div class="btns">
                 <a class="btn event-detail-btn">Join</a>
                 <a class="btn btn-secondary-detail event-detail-btn" href="">Share <i class="fa-solid fa-share-nodes"></i></a>
-                {% if app.user.id == event.creator.id %}
-                    <a class="btn btn-secondary-detail event-detail-btn" href="{{ path(name = 'event_new', parameters = {id: event.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
+                {% if app.user == event.creator %}
+                    <a class="btn btn-secondary-detail event-detail-btn" href="{{ path('event_edit', {id: event.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
                     <form method="post" action="{{ path('event_delete', {id: event.id}) }}" onsubmit="return confirm('Are you sure you want to delete this event?');">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ event.id) }}">
                         <button type="submit" class="btn btn-secondary-detail event-detail-btn">Delete</button>
