--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,6 +38,7 @@ h3{
     align-items: center;
     justify-content: center;
     gap: 1em;
+    min-width: max-content;
 }
 
 .btn {
@@ -50,12 +51,11 @@ h3{
     font-size: 20px;
     font-weight: 700;
     padding: .5em 1em;
-    min-width: fit-content;
+    min-width: max-content;
     width: 100%;
     cursor: pointer;
     transition: all 250ms ease-out;
 }
-
 
 .btn:hover{
     border-color: var(--primary);
