--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -36,7 +36,9 @@
 
             <div class="btns">
                 {% if isJoined %}
-                    <a class="btn event-detail-btn">Joined <i class="fa-solid fa-check"></i></a>
+                    <a class="btn event-detail-btn event-leave-btn" href="{{ path('event_leave', {id: event.id, title: event.title}) }}">
+                        Joined <i class="fa-solid fa-check"></i>
+                    </a>
                 {% else %}
                     <a class="btn event-detail-btn" href={{ path('event_join', {id: event.id, title: event.title}) }}>Join</a>
                 {% endif %}
